--- a/Mars/doc/mars_vignette.Rmd
+++ b/Mars/doc/mars_vignette.Rmd
@@ -14,6 +14,9 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Github Page
+https://github.com/DustinPoon/STAT360Project
+
 ## Description
 
 Using methods from Friedman's paper "Multivariate Adaptive Regression Splines" to construct a regression model.
@@ -72,7 +75,7 @@ The GCV criterion can be calculated using the following formula:
   RSS×(N/(N - C'(M))^2)
 N is the number of rows in the dataset.
 M is one less than the number of coefficients in the fitted model.
-C’(M) is the sum of the hatvalues from the fitted model and the smoothing parameter d times M, where d is typically set to 3, according to
+C’(M) is the sum of the hat-values from the fitted model and the smoothing parameter d times M, where d is typically set to 3, according to
 Friedman.
 
 ## Value
